--- a/Notebook/LANdesign.tex
+++ b/Notebook/LANdesign.tex
@@ -8,22 +8,22 @@ A hierarchical LAN design includes the following three layers, as shown in Figur
 \end{itemize}
 \begin{figure}[hbtp]
 \centering
-\includegraphics[width=0.6\textwidth]{pictures/Hierarchical-model.png}
+\includegraphics[width=0.7\textwidth]{pictures/Hierarchical-model.png}
 \caption{Three-layer hierarchical design model}
 \label{Hierarchical-model}
 \end{figure}
 \begin{figure}[hbtp]
 \centering
-\includegraphics[width=0.6\textwidth]{pictures/collapsed-core.png}
+\includegraphics[width=0.7\textwidth]{pictures/collapsed-core.png}
 \caption{Collapsed Core}
 \label{collapsed-core}
 \end{figure}
-Even though the hierarchical model has three layers, some smaller enterprise networks may implement a two-tier hierarchical design. In a two-tier hierarchical design, the core and distribution layers are collapsed into one layer, reducing cost and complexity, as shown in Figure \ref{collapsed-core}.
+Even though the hierarchical model has three layers, some smaller enterprise networks may implement a two-tier hierarchical design. In a two-tier hierarchical design, the core and distribution layers are collapsed into one layer, as shown in Figure \ref{collapsed-core}.
 \section{Expanding the network}
-To support a large, medium or small network, the network designer must develop a strategy to enable the network to be available and to scale effectively and easily. Included in a basic network design strategy are the following recommendations:
+The network designer must develop a strategy to enable the network to be available and to scale effectively and easily. Included in a basic network design strategy are the following recommendations:
 \begin{itemize}
-\item Use expandable, modular equipment or clustered devices that can be easily upgraded to increase capabilities. 
-\item Design a hierarchical network to include modules that can be added, upgraded, and modified, as necessary, without affecting the design of the other functional areas of the network.
+\item Use expandable, modular equipment or clustered devices that can be easily upgraded. 
+\item Design a hierarchical network to include modules that can be upgraded without affecting the design of the other functional areas of the network.
 \item Create an IPv4 or IPv6 address strategy that is hierarchical. 
 \item Choose routers or multilayer switches to limit broadcasts and filter other undesirable traffic from the network. 
 \end{itemize}
