--- a/Notebook/CCNA notebook.tex
+++ b/Notebook/CCNA notebook.tex
@@ -1,4 +1,4 @@
-\documentclass[]{report}
+\documentclass[]{book}
 \usepackage{huy,math,titlepage}
 \theoremstyle{definition}
 \newtheorem{exercise}{Exercise}[chapter]
@@ -23,4 +23,5 @@
 \include{ospf}
 \include{ACL}
 \include{Monitoring}
+\include{QoS}
 \end{document}
