--- a/Notebook/Monitoring.tex
+++ b/Notebook/Monitoring.tex
@@ -94,7 +94,7 @@ MIB saves data in variables and organizes them hierarchically. Formally, the MIB
 	\begin{figure}[hbtp]
 	\caption{OID tree}\label{OID-tree}
 	\centering
-	\includegraphics[scale=1]{pictures/OID-tree.png}
+	\includegraphics[ width=0.8\textwidth ]{pictures/OID-tree.png}
 	\end{figure}
 For example, OIDs belonging to Cisco, are numbered as follows: .iso (1).org (3).dod (6).internet (1).private (4).enterprises (1).cisco (9). Therefore the OID is 1.3.6.1.4.1.9.
 The data is retrieved via the snmpget utility, issued on the NMS. Using the snmpget utility, one can manually retrieve real-time data or have the NMS run a report which would give you a period of time that you could use the data to get the average. 
