--- a/Notebook/CCNA notebook.tex
+++ b/Notebook/CCNA notebook.tex
@@ -21,7 +21,13 @@
 \include{hsrp}
 \include{eigrp}
 \include{ospf}
-\include{ACL}
-\include{Monitoring}
-\include{QoS}
+
+%\part{CONNECTING NETWORKS}
+%\include{WANconcepts}
+%\include{ACL}
+%\include{Monitoring}
+%\include{QoS}
+%\include{PPP}
+%\include{GRE,eBGP}
+%\include{Troubleshooting}
 \end{document}
